Improve handling of 'display' property for <noscript>. b=236450 r+sr=bzbarsky